Closed Bug 547232 Opened 14 years ago Closed 14 years ago

solaris nanojit compiler error LIR_qcmov is not defined.

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P2)

Sun
Solaris
defect

Tracking

(Not tracked)

VERIFIED FIXED
flash10.1

People

(Reporter: dschaffe, Assigned: leon.sha)

References

Details

(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey, fixed-in-tamarin)

Attachments

(1 file)

tamarin-redux does not compile on solaris

error:
"/export/home/build/hg/tamarin-redux/nanojit/NativeSparc.cpp", line 790: Error: LIR_qcmov is not defined.

steps to reproduce using cross-platform script:
$ mkdir objdir-release;cd objdir-release
$ ../configure.py --enable-shell
$ make
...
"/export/home/build/hg/tamarin-redux/nanojit/NativeSparc.cpp", line 790: Error: LIR_qcmov is not defined.
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Assignee: nobody → leon.sha
Priority: -- → P2
Target Milestone: --- → flash10.1
Flags: flashplayer-qrb? → flashplayer-qrb+
Assignee: leon.sha → nobody
Component: Virtual Machine → JIT Compiler (NanoJIT)
QA Contact: vm → nanojit
Status: NEW → ASSIGNED
Assignee: nobody → leon.sha
This was injected by https://bugzilla.mozilla.org/show_bug.cgi?id=542326 -- the fixes necessary should be pretty trivial.
This patch also include another build error on sparc.
Attachment #428637 - Flags: review?(stejohns)
Attachment #428637 - Flags: review?(stejohns) → review+
http://hg.mozilla.org/projects/nanojit-central/rev/3b1d24a51ce4
Whiteboard: fixed-in-nanojit
Blocks: 538635
http://hg.mozilla.org/tracemonkey/rev/065bbe536a93
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
tr-argo changeset 3787:d11fa5bda0b7
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
(In reply to comment #6)
> tr-argo changeset 3787:d11fa5bda0b7

reopening bug. I think this should be left as open until it is officially "fixed-in-tamarin-redux". This was just a spot merge of the fix. 

The tamarin-redux nanojit-merge stamp is still at rev 1214:3fa60904a28e and this spot merge is from 1220:3b1d24a51ce4
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
fixed, pushed in http://hg.mozilla.org/tamarin-redux/rev/bbaf09be4c08
Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey → fixed-in-nanojit, fixed-in-tracemonkey, fixed-in-tamarin
Status: REOPENED → RESOLVED
Closed: 14 years ago14 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: