 Bug 547232 -  solaris nanojit compiler error LIR_qcmov is not defined. r=stejohns