js/src/nanojit/NativeSparc.cpp
@@ -678,11 +678,11 @@ namespace nanojit
         else
             {
                 int c = rhs->imm32();
-                if (op == LIR_add || op == LIR_iaddp || op == LIR_addxov) {
+                if (op == LIR_add || op == LIR_iaddp || op == LIR_addxov)
                     ADDCC(rr, L2, rr);
-                } else if (op == LIR_sub || op == LIR_subxov)
+                else if (op == LIR_sub || op == LIR_subxov)
                     SUBCC(rr, L2, rr);
-                } else if (op == LIR_and)
+                else if (op == LIR_and)
                     AND(rr, L2, rr);
                 else if (op == LIR_or)
                     OR(rr, L2, rr);
@@ -783,8 +783,6 @@ namespace nanojit
             case LIR_uge: MOVCS (iffalsereg, 1, 0, 0, rr); break;
                 debug_only( default: NanoAssert(0); break; )
                     }
-        } else if (op == LIR_qcmov) {
-            NanoAssert(0);
         }
         /*const Register iftruereg =*/ findSpecificRegFor(iftrue, rr);
         asm_cmp(condval);
